# modules-playground

./: CMakeLists.txt
asio-module/: CMakeLists.txt  asioConfig.cmake
asio-module/include/asio/: any_completion_handler.hpp  append.hpp  associated_allocator.hpp  awaitable.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_file.hpp  basic_random_access_file.hpp  basic_raw_socket.hpp  basic_readable_pipe.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_file.hpp  basic_stream_socket.hpp  basic_streambuf.hpp  basic_streambuf_fwd.hpp  basic_waitable_timer.hpp  basic_writable_pipe.hpp  buffer.hpp  buffer_registration.hpp  buffered_read_stream.hpp  buffered_stream.hpp  buffered_write_stream.hpp  buffers_iterator.hpp  cancellation_signal.hpp  cancellation_state.hpp  completion_condition.hpp  consign.hpp  deferred.hpp  detached.hpp  error.hpp  error_code.hpp  execution_context.hpp  executor.hpp  io_context.hpp  is_contiguous_iterator.hpp  (+9 more)
asio-module/include/asio/detail/: array.hpp  array_fwd.hpp  assert.hpp  atomic_count.hpp  buffered_stream_storage.hpp  chrono.hpp  config.hpp  consuming_buffers.hpp  cstddef.hpp  cstdint.hpp  deadline_timer_service.hpp  descriptor_ops.hpp  dev_poll_reactor.hpp  exception.hpp  functional.hpp  future.hpp  hash_map.hpp  io_control.hpp  io_object_impl.hpp  io_uring_file_service.hpp  kqueue_reactor.hpp  limits.hpp  memory.hpp  posix_event.hpp  posix_fd_set_adapter.hpp  posix_global.hpp  posix_serial_port_service.hpp  posix_signal_blocker.hpp  posix_thread.hpp  select_reactor.hpp  service_registry.hpp  signal_init.hpp  signal_set_service.hpp  socket_option.hpp  source_location.hpp  std_event.hpp  std_fenced_block.hpp  std_global.hpp  std_mutex.hpp  std_static_mutex.hpp  (+15 more)
asio-module/include/asio/detail/impl/: descriptor_ops.ipp  epoll_reactor.ipp  handler_tracking.ipp  io_uring_file_service.ipp  io_uring_service.ipp  null_event.ipp  posix_serial_port_service.ipp  service_registry.ipp  signal_set_service.ipp  socket_ops.ipp  socket_select_interrupter.ipp  win_iocp_file_service.ipp  win_iocp_serial_port_service.ipp  win_static_mutex.ipp  winrt_ssocket_service_base.ipp
asio-module/include/asio/execution/: any_executor.hpp  bad_executor.hpp  context.hpp
asio-module/include/asio/experimental/: awaitable_operators.hpp  cancellation_condition.hpp  channel_traits.hpp  co_spawn.hpp  coro_traits.hpp  parallel_group.hpp  promise.hpp  use_coro.hpp  use_promise.hpp
asio-module/include/asio/experimental/detail/: channel_message.hpp  channel_payload.hpp  partial_promise.hpp
asio-module/include/asio/experimental/impl/: as_single.hpp  co_composed.hpp  parallel_group.hpp  promise.hpp  use_promise.hpp
asio-module/include/asio/generic/: datagram_protocol.hpp  raw_protocol.hpp  seq_packet_protocol.hpp  stream_protocol.hpp
asio-module/include/asio/generic/detail/: endpoint.hpp
asio-module/include/asio/generic/detail/impl/: endpoint.ipp
asio-module/include/asio/impl/: as_tuple.hpp  awaitable.hpp  connect.hpp  connect_pipe.ipp  error.ipp  error_code.ipp  executor.hpp  read.hpp  read_at.hpp  read_until.hpp  serial_port_base.ipp  spawn.hpp  thread_pool.ipp  use_future.hpp
asio-module/include/asio/ip/: address.hpp  address_v4.hpp  address_v6.hpp  bad_address_cast.hpp  basic_endpoint.hpp  basic_resolver.hpp  basic_resolver_entry.hpp  basic_resolver_iterator.hpp  basic_resolver_query.hpp  basic_resolver_results.hpp  host_name.hpp  multicast.hpp  network_v4.hpp  network_v6.hpp  unicast.hpp
asio-module/include/asio/ip/detail/: endpoint.hpp  socket_option.hpp
asio-module/include/asio/ip/detail/impl/: endpoint.ipp
asio-module/include/asio/ip/impl/: address.ipp  address_v4.ipp  address_v6.ipp  network_v4.ipp  network_v6.ipp
asio-module/include/asio/local/: basic_endpoint.hpp
asio-module/include/asio/local/detail/: endpoint.hpp
asio-module/include/asio/local/detail/impl/: endpoint.ipp
asio-module/include/asio/posix/: basic_descriptor.hpp
asio-module/include/asio/ssl/: context.hpp  host_name_verification.hpp  rfc2818_verification.hpp
asio-module/include/asio/ssl/detail/: openssl_init.hpp  password_callback.hpp
asio-module/include/asio/ssl/detail/impl/: openssl_init.ipp
asio-module/include/asio/ssl/impl/: context.ipp  host_name_verification.ipp  rfc2818_verification.ipp
asio-module/include/asio/windows/: basic_object_handle.hpp  basic_overlapped_handle.hpp
asio-module/module/: asio.cxx
charconv/: CMakeLists.txt  charconvConfig.cmake
charconv/include/boost/charconv/: config.hpp  from_chars.hpp  limits.hpp  to_chars.hpp
charconv/include/boost/charconv/detail/: apply_sign.hpp  bit_layouts.hpp  buffer_sizing.hpp  compute_float32.hpp  compute_float64.hpp  compute_float80.hpp  config.hpp  emulated128.hpp  fallback_routines.hpp  from_chars_integer_impl.hpp  from_chars_result.hpp  generate_nan.hpp  integer_search_trees.hpp  issignaling.hpp  memcpy.hpp  parser.hpp  significand_tables.hpp  to_chars_integer_impl.hpp  to_chars_result.hpp  type_traits.hpp
charconv/include/boost/charconv/detail/dragonbox/: dragonbox.hpp  dragonbox_common.hpp  floff.hpp
charconv/include/boost/charconv/detail/fast_float/: ascii_number.hpp  bigint.hpp  constexpr_feature_detect.hpp  decimal_to_binary.hpp  digit_comparison.hpp  fast_table.hpp  float_common.hpp  parse_number.hpp
charconv/include/boost/charconv/detail/ryu/: generic_128.hpp  ryu_generic_128.hpp
charconv/module/: charconv.cxx
consumer/: CMakeLists.txt  main.cpp
mylib/: CMakeLists.txt  mylibConfig.cmake
mylib/include/: mylib_iface.hpp
mylib/module/: mylib.cxx
mylib/src/: mylib.cpp
stdlib/: CMakeLists.txt  stdlibConfig.cmake
